--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts":{
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "start": "node apps/api/dist/main"
+    "start": "node apps/api/dist/src/main"
   },
   "workspaces":[
     "apps/*"
