--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.0",
     "antd": "^5.22.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.49.3",
+    "react-hook-form-context": "^1.0.0",
+    "react-route-type": "https://github.com/mohammadgharouni/react-route-type",
+    "react-router-dom": "6.28.0",
+    "@supabase/supabase-js":"^2.46.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
