added login api

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,12 +23,11 @@
     "@nestjs/apollo": "^10.2.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/graphql": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
+    "@nestjs/swagger": "^8.0.7",
     "@prisma/client": "^4.11.0",
     "apollo-server-express": "^3.12.0",
-    "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
