--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -8,19 +8,27 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "swagger":"swag-ts"
+    "swagger": "swag-ts",
+    "colors-sync": "tsx scripts/color-sync.ts",
+    "compile": "tsc -b"
   },
   "dependencies": {
+    "@icon-park/react": "^1.4.2",
+    "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-query": "^5.62.0",
     "antd": "^5.22.2",
+    "framer-motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.3",
     "react-hook-form-context": "^1.0.0",
+    "react-i18next": "^15.1.3",
     "react-route-type": "https://github.com/mohammadgharouni/react-route-type",
     "react-router-dom": "6.28.0",
-    "@supabase/supabase-js":"^2.46.2",
-    "swagger-typescript":"^6.9.0"
+    "starkstring": "^0.4.4",
+    "swagger-typescript": "^6.9.0",
+    "tailwind-merge": "^2.5.5",
+    "vite-tsconfig-paths": "^5.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -34,6 +42,7 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
+    "tsx": "^4.19.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
