--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -28,7 +28,8 @@
     "starkstring": "^0.4.4",
     "swagger-typescript": "^6.9.0",
     "tailwind-merge": "^2.5.5",
-    "vite-tsconfig-paths": "^5.1.3"
+    "vite-tsconfig-paths": "^5.1.3",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
